--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "license": "ISC",
   "author": "Prisca and tobe",
   "type": "module",
-  "main": "index.js",
+  "main": "str/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "nodemon --experimental-json-modules --exec babel-node src/index.js"
-    
+    "start": "nodemon --experimental-json-modules --exec babel-node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^5.1.0",
+    "mongodb": "^6.18.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
