--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "license": "ISC",
   "author": "Prisca and tobe",
   "type": "module",
-  "main": "str/index.js",
+  "main": "str/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-json-modules --exec babel-node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "nodemon --experimental-json-modules --exec babel-node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
