--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "main": "str/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js", 
-    "dev": "nodemon --experimental-json-modules --exec babel-node src/server.js"
+    "start": "nodemon --experimental-json-modules --exec babel-node src/server.js",
+    "dev": "nodemon src/server.js"
+    
   },
   "dependencies": {
     "cors": "^2.8.5",
