--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --experimental-json-modules --exec babel-node src/server.js",
     "dev": "nodemon src/server.js"
-    
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
